src/test/resources/repos/invalid-binary-desc-subjects/408/170/a35/408170a3501db93228c14e2e84a51c2df6a03ac1063e85b6ec6ceee89deb527b/v2/inventory.json.sha512
04e1f6a57c13b6487ad9e8cba776b4dd22667898f1daa069a06448e26cc51b3dcaea1eb3cf0490442b6d55a1e6b53c771f3c78154cf8c09b49f2b64e6df3e53c	inventory.json